--- a/pawpal-web/src/index.css
+++ b/pawpal-web/src/index.css
@@ -7,3 +7,22 @@
 body {
   font-family: inherit;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #000;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 0;
+}
+
+* {
+  scrollbar-color: #000 #000;
+  scrollbar-width: thin;
+}
