--- a/pawpal-web/src/index.css
+++ b/pawpal-web/src/index.css
@@ -9,12 +9,12 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
+  width: 6px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #000;
+  background: #fff;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -23,6 +23,6 @@ body {
 }
 
 * {
-  scrollbar-color: #000 #000;
+  scrollbar-color: #000 #fff;
   scrollbar-width: thin;
 }
